# pigment_mixing

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
matter/: CMakeLists.txt  pigment_config.json  sim_config.json
matter/levelsets/: Blob_left.vdb  Blob_right.vdb  box.vdb  box_small.vdb  convertAnim2bin.py  obj2vdb.py
matter/levelsets/blobs/: Blob_01.vdb  Blob_02.vdb  Blob_03.vdb  Blob_04.vdb  Blob_05.vdb  Blob_06.vdb  Blob_07.vdb  Blob_09.vdb  Blob_11.vdb
matter/src/: CMakeLists.txt  data_structures.hpp  tools.hpp
matter/src/objects/: object_general.hpp  object_spatula.hpp  object_vdb.hpp
matter/src/sampling/: sampling_particles_vdb.hpp
matter/src/simulation/: boundary_collision.cpp  deformation_update.cpp  explicit_euler_update.cpp  g2p.cpp  musl.cpp  p2g.cpp  pbc.cpp  plasticity.cpp  position_update.cpp  precompute_weight.cpp  remesh.cpp  save_data.cpp  simulation.cpp  simulation.hpp  simulation_blobs.cpp  simulation_units.cpp  update_dt.cpp
matter/tests/: CMakeLists.txt
raytracing/: CMakeLists.txt  README.md  camera_config.json  colors_config.json  imgui.ini  output_plum.txt  pch.h  render_config.json  vcpkg.json
raytracing/data/: spatula_handler.mtl
raytracing/data/Scenes/: DamBreakModel.json  DoubleDamBreak.json  MotorScene.json
raytracing/data/Scenes/Cache/: UnitBox_sb_vm_0.01999999955296516418_s2.5_3_1.5_r20_15_10_i1_t0.cdm
raytracing/shaders/march/: density.glsl  marchingCubes.glsl  tri.frag  tri.vert
raytracing/shaders/raymarching/: Billinearinterpolation.glsl  DepthMap.frag  DepthMap.vert  GaussBilateral.glsl  NScreen.glsl  bilateral.glsl  brdf.frag  depthVariance.glsl  hdr_to_cubemap.frag  hdr_to_cubemap.vert  irradiance_convolution.frag  pbr_lighting.glsl  prefilter.frag  raymarch.glsl  shader.frag  shader.vert  skybox.frag  skybox.vert  spatula.frag  spatula.vert
raytracing/src/: Camera.h  PassTimer.cpp  PassTimer.h  Shader.h  main.cpp  state.h
raytracing/src/march/: MarchingCubes.cpp  MarchingCubes.h
raytracing/src/mixbox/: CMakeLists.txt
raytracing/src/mpm/: MPMIntegrationSim.cpp  MPMIntegrationSim.h
raytracing/src/raymarch/: AABBc.cpp  AABBc.h  BinaryDensityGrid.cpp  BinaryDensityGrid.h  Classification.cpp  Classification.h  DepthProcessor.cpp  DepthProcessor.h  HDRLoader.cpp  HDRLoader.h  RayMarch.cpp  RayMarch.h  SpatulaMesh.cpp  SpatulaMesh.h
raytracing/src/sph/: SPHIntegrationSim.cpp  SPHIntegrationSim.h
